--- a/artist_service/src/main/resources/application.properties
+++ b/artist_service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/artist_service
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=261997
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql= true
 
