--- a/config-data/song-service.yml
+++ b/config-data/song-service.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/proyects
-    username:
-    password:
+    username: caroatam
+    password: 40975241
   jpa:
     hibernate:
       ddl-auto: update
