--- a/artist_service/src/main/resources/application.properties
+++ b/artist_service/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql= true
 
+spring.application.name=artist_service
+
 server.port=8081
+
