--- a/song_service/src/main/resources/application.properties
+++ b/song_service/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql= true
 
+spring.application.name=song_service
+
 server.port=8001
