--- a/config-data/song-service.yml
+++ b/config-data/song-service.yml
@@ -2,9 +2,9 @@ server:
   port: 8003
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/database_name
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/artist_service
+    username: root
+    password: 261997
   jpa:
     hibernate:
       ddl-auto: update
