--- a/config-data/song-service.yml
+++ b/config-data/song-service.yml
@@ -2,9 +2,9 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/artist_service
-    username: root
-    password: root
+    url: jdbc:mysql://localhost:3306/proyects
+    username: caroatam
+    password: 40975241
   jpa:
     hibernate:
       ddl-auto: update
