--- a/config-data/artist-service.yml
+++ b/config-data/artist-service.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/artist_service
     username: root
-    password: root
+    password: 261997
   jpa:
     hibernate:
       ddl-auto: update
