--- a/artist_service/src/main/resources/bootstrap.yml
+++ b/artist_service/src/main/resources/bootstrap.yml
@@ -6,6 +6,11 @@ spring:
       enabled: true
       uri: http://localhost:8081
 
-springdoc:
+spring-doc:
   api-docs:
     path: /api-docs
+#server:
+#  forward-headers-strategy: framework
+
+
+
