--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -22,6 +22,10 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/song/**
+        - id: swagger-ui
+          uri: ${swagger-ui_url}
+          predicates:
+              - Path=/swagger-ui/**,/swagger-resources/**,/swagger-ui.html,/v2/api-docs,/webjars/**,/view/**
 
 
 
