--- a/song_service/src/main/resources/bootstrap.yml
+++ b/song_service/src/main/resources/bootstrap.yml
@@ -6,6 +6,6 @@ spring:
       enabled: true
       uri: http://localhost:8081
 
-springdoc:
+spring-doc:
   api-docs:
-    path: /api-docs
+    path: /song-docs
