--- a/song_service/src/main/resources/bootstrap.yml
+++ b/song_service/src/main/resources/bootstrap.yml
@@ -6,6 +6,11 @@ spring:
       enabled: true
       uri: http://localhost:8081
 
+server:
+  forward-headers-strategy: framework
+
 spring-doc:
   api-docs:
     path: /song-docs
+  cache:
+    disabled: true
