--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -1,5 +1,7 @@
 server:
   port: 8080
+  forward-headers-strategy: framework
+
 eureka:
   client:
     fetch-registry: true
@@ -22,6 +24,8 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/song/**
+          filters:
+            - StripPrefix=2
 
 
 
