simulation swagger-gateway

--- a/artist_service/src/main/resources/bootstrap.yml
+++ b/artist_service/src/main/resources/bootstrap.yml
@@ -5,12 +5,8 @@ spring:
     config:
       enabled: true
       uri: http://localhost:8081
-
 spring-doc:
-  api-docs:
-    path: /artist-docs
-#server:
-#  forward-headers-strategy: framework
+  subpackage: com.example.demo
 
 
 
