--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -22,6 +22,9 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/song/**
-
+        - id: security-service
+            uri: lb://security-service
+            predicates:
+              - Path=/users/**
 
 
