--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -47,6 +47,18 @@
 		<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		<version>3.1.3</version>
 		</dependency>
+		<!--bootstrap-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+		<!--config cliente -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>3.1.3</version>
+		</dependency>
      <!-- Security-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
