--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<!--swagger -->
+		<!--<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.4</version>
+		</dependency>-->
 	</dependencies>
 
 	<build>
