--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -22,5 +22,8 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/song/**
-
+        - id: security-service
+          uri: lb://security-service
+          predicates:
+            - Path=/users/**
 
