--- a/artist_service/src/main/resources/bootstrap.yml
+++ b/artist_service/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
       enabled: true
       uri: http://localhost:8081
 spring-doc:
-  subpackage: com.example.demo
+  subpackage: com.example.demo.controller.ArtistController
 
 
 
