--- a/song_service/src/main/resources/bootstrap.yml
+++ b/song_service/src/main/resources/bootstrap.yml
@@ -7,5 +7,5 @@ spring:
       uri: http://localhost:8081
 
 spring-doc:
-  subpackage: com.example.demo.controller.SongController
+  packages-to-scan: com.example.demo.controller.SongController
 
