--- a/artist_service/src/main/resources/bootstrap.yml
+++ b/artist_service/src/main/resources/bootstrap.yml
@@ -9,8 +9,8 @@ spring:
 spring-doc:
   api-docs:
     path: /artist-docs
-#server:
-#  forward-headers-strategy: framework
+  cache:
+    disabled: true
 
 
 
