--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -1,13 +1,13 @@
 server:
   port: 8080
-  forward-headers-strategy: framework
+#  forward-headers-strategy: framework
 
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://${eureka.instance.hostname}:8761/eureka
 
 spring:
   cloud:
@@ -24,8 +24,6 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/song/**
-          filters:
-            - StripPrefix=2
 
 
 
