--- a/song_service/src/main/resources/bootstrap.yml
+++ b/song_service/src/main/resources/bootstrap.yml
@@ -6,8 +6,8 @@ spring:
       enabled: true
       uri: http://localhost:8081
 
-server:
-  forward-headers-strategy: framework
+#server:
+#  forward-headers-strategy: framework
 
 spring-doc:
   api-docs:
