--- a/song_service/pom.xml
+++ b/song_service/pom.xml
@@ -82,6 +82,12 @@
 			<version>3.1.0</version>
 		</dependency>
 
+<!--		validation-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
